# uc-intg-synology-system

./: .gitignore  README.md  driver.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
uc_intg_synology_system/: __init__.py  camera_media_player.py  client.py  config.py  driver.py  helpers.py  media_player.py  remote.py  setup.py
